Correct the out-of-control preview size on firefox
With `#preso` positioned normally, it affected the size of its parent.
that meant that the container was pushed to a size to fit around the
slide, then we tried to use that size to scale the slide down to fit.
Since it was in a container sized for it, it already fit. But everything
else was boogered.

Setting the `#preso` element to absolute positioning, this pulled it out
of the normal flow, so it didn't affect the layout size of its parent.
That means that our scaling algorithm now works properly.

What a pain in the ass. I will be happy when we figure out a better way.

--- a/public/css/presenter.css
+++ b/public/css/presenter.css
@@ -226,7 +226,6 @@
               flex-flow: row;
       -webkit-flex: 10;
               flex: 10;
-      max-height: 95%;  /* dear Firefox; what's the point of flex-box if we still have to do this crap? */
     }
 
     #preview {
@@ -264,6 +263,9 @@
       -webkit-box-shadow:0 0 25px rgba(0,0,0,0.35);
       -moz-box-shadow:0 0 25px rgba(0,0,0,0.35);
       box-shadow:0 0 25px rgba(0,0,0,0.35);
+    }
+    body.no-zoom #preso {
+      position: absolute;
     }
 
     #statusbar {
