--- a/public/css/showoff.css
+++ b/public/css/showoff.css
@@ -68,6 +68,10 @@ pre code {
     background-position: center;
     background-size: cover;
   }
+  /* When we scale on Firefox, keep it centered */
+  #preso {
+    -moz-transform-origin: 0 0;
+  }
 
   .slide {
     font-size: 1.5em;
